fix vertical alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
   margin: 0 auto;
 }
 
-table {
+table td {
   vertical-align: top;
 }
 
